demo/sdl_opengl3/nimnuklear/nuklear.nim


proc draw_list_init*(a2: ptr draw_list) {.cdecl, importc: "nk_draw_list_init",
                                      header: headernuklear.}
proc draw_list_setup*(a2: ptr draw_list; a3: ptr convert_config; cmds: ptr buffer;
                     vertices: ptr buffer; elements: ptr buffer;
                     line_aa: anti_aliasing; shape_aa: anti_aliasing) {.cdecl,
    importc: "nk_draw_list_setup", header: headernuklear.}
proc draw_list_begin*(a2: ptr draw_list; a3: ptr buffer): ptr draw_command {.cdecl,
    importc: "nk__draw_list_begin", header: headernuklear.}
proc draw_list_next*(a2: ptr draw_command; a3: ptr buffer; a4: ptr draw_list): ptr draw_command {.
    cdecl, importc: "nk__draw_list_next", header: headernuklear.}
proc draw_list_end*(a2: ptr draw_list; a3: ptr buffer): ptr draw_command {.cdecl,
    importc: "nk__draw_list_end", header: headernuklear.}
proc draw_list_path_clear*(a2: ptr draw_list) {.cdecl,
    importc: "nk_draw_list_path_clear", header: headernuklear.}
proc draw_list_path_line_to*(a2: ptr draw_list; pos: vec2) {.cdecl,
    importc: "nk_draw_list_path_line_to", header: headernuklear.}
proc draw_list_path_arc_to_fast*(a2: ptr draw_list; center: vec2; radius: cfloat;
                                a_min: cint; a_max: cint) {.cdecl,
    importc: "nk_draw_list_path_arc_to_fast", header: headernuklear.}
proc draw_list_path_arc_to*(a2: ptr draw_list; center: vec2; radius: cfloat;
                           a_min: cfloat; a_max: cfloat; segments: cuint) {.cdecl,
    importc: "nk_draw_list_path_arc_to", header: headernuklear.}
proc draw_list_path_rect_to*(a2: ptr draw_list; a: vec2; b: vec2; rounding: cfloat) {.
    cdecl, importc: "nk_draw_list_path_rect_to", header: headernuklear.}
proc draw_list_path_curve_to*(a2: ptr draw_list; p2: vec2; p3: vec2; p4: vec2;
                             num_segments: cuint) {.cdecl,
    importc: "nk_draw_list_path_curve_to", header: headernuklear.}
proc draw_list_path_fill*(a2: ptr draw_list; a3: color) {.cdecl,
    importc: "nk_draw_list_path_fill", header: headernuklear.}
proc draw_list_path_stroke*(a2: ptr draw_list; a3: color; closed: draw_list_stroke;
                           thickness: cfloat) {.cdecl,
    importc: "nk_draw_list_path_stroke", header: headernuklear.}
proc draw_list_stroke_line*(a2: ptr draw_list; a: vec2; b: vec2; a5: color;
                           thickness: cfloat) {.cdecl,
    importc: "nk_draw_list_stroke_line", header: headernuklear.}
proc draw_list_stroke_rect*(a2: ptr draw_list; rect: rect; a4: color; rounding: cfloat;
                           thickness: cfloat) {.cdecl,
    importc: "nk_draw_list_stroke_rect", header: headernuklear.}
proc draw_list_stroke_triangle*(a2: ptr draw_list; a: vec2; b: vec2; c: vec2; a6: color;
                               thickness: cfloat) {.cdecl,
    importc: "nk_draw_list_stroke_triangle", header: headernuklear.}
proc draw_list_stroke_circle*(a2: ptr draw_list; center: vec2; radius: cfloat;
                             a5: color; segs: cuint; thickness: cfloat) {.cdecl,
    importc: "nk_draw_list_stroke_circle", header: headernuklear.}
proc draw_list_stroke_curve*(a2: ptr draw_list; p0: vec2; cp0: vec2; cp1: vec2; p1: vec2;
                            a7: color; segments: cuint; thickness: cfloat) {.cdecl,
    importc: "nk_draw_list_stroke_curve", header: headernuklear.}
proc draw_list_stroke_poly_line*(a2: ptr draw_list; pnts: ptr vec2; cnt: cuint;
                                a5: color; a6: draw_list_stroke; thickness: cfloat;
                                a8: anti_aliasing) {.cdecl,
    importc: "nk_draw_list_stroke_poly_line", header: headernuklear.}
proc draw_list_fill_rect*(a2: ptr draw_list; rect: rect; a4: color; rounding: cfloat) {.
    cdecl, importc: "nk_draw_list_fill_rect", header: headernuklear.}
proc draw_list_fill_rect_multi_color*(a2: ptr draw_list; rect: rect; left: color;
                                     top: color; right: color; bottom: color) {.cdecl,
    importc: "nk_draw_list_fill_rect_multi_color", header: headernuklear.}
proc draw_list_fill_triangle*(a2: ptr draw_list; a: vec2; b: vec2; c: vec2; a6: color) {.
    cdecl, importc: "nk_draw_list_fill_triangle", header: headernuklear.}
proc draw_list_fill_circle*(a2: ptr draw_list; center: vec2; radius: cfloat; col: color;
                           segs: cuint) {.cdecl,
                                        importc: "nk_draw_list_fill_circle",
                                        header: headernuklear.}
proc draw_list_fill_poly_convex*(a2: ptr draw_list; points: ptr vec2; count: cuint;
                                a5: color; a6: anti_aliasing) {.cdecl,
    importc: "nk_draw_list_fill_poly_convex", header: headernuklear.}
proc draw_list_add_image*(a2: ptr draw_list; texture: img; rect: rect; a5: color) {.
    cdecl, importc: "nk_draw_list_add_image", header: headernuklear.}
proc draw_list_add_text*(a2: ptr draw_list; a3: ptr user_font; a4: rect; text: cstring;
                        len: cint; font_height: cfloat; a8: color) {.cdecl,
    importc: "nk_draw_list_add_text", header: headernuklear.}



proc style_item_image*(img: img): style_item {.cdecl,
    importc: "nk_style_item_image", header: headernuklear.}
proc style_item_color*(a2: color): style_item {.cdecl,
    importc: "nk_style_item_color", header: headernuklear.}
proc style_item_hide*(): style_item {.cdecl, importc: "nk_style_item_hide",header: headernuklear.}
